[workspace]
members = [
    "util",
    "day_1",
    "day_2",
    "day_3",
    "day_4",
    "day_5",
    "day_6",
    "day_7",
    "day_8",
    "day_9",
    "day_10",
    "day_11",
]

[profile.test.package.day_11]
# The real input take a couple of seconds in debug mode, and a couple of milliseconds in release mode
opt-level = 3